--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,11 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "files.associations": {
+    "stm32f4xx.h": "c",
+    "globals.h": "c",
+    "stdbool.h": "c",
+    "handler.h": "c"
+  }
 }
